@@ -1,3 +1,8 @@
+2009-10-18  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* Mono.Debugging.Client/DebuggerSession.cs: Fix Pocess/Process
+	  spelling. Don't lock in IsRunning or MD can deadlock.
+
 2009-10-05  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* Mono.Debugging.Client/ThreadInfo.cs:
